WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270799
REGRESSION(
275801@main
): Fix issues with InteractionRegion generation
https://bugs.webkit.org/show_bug.cgi?id=270799
Summary
REGRESSION(275801@main): Fix issues with InteractionRegion generation
Etienne
Reported
2024-03-11 09:08:14 PDT
REGRESSION(
275801@main
): Fix issues InteractionRegion generation
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2024-03-11 09:38:28 PDT
<
rdar://problem/124340905
>
Etienne
Comment 2
2024-03-11 09:38:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25728
EWS
Comment 3
2024-03-11 16:08:35 PDT
Committed
275936@main
(9aea4732b3b7): <
https://commits.webkit.org/275936@main
> Reviewed commits have been landed. Closing PR #25728 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug