REGRESSION(275801@main): Fix issues with InteractionRegion generation https://bugs.webkit.org/show_bug.cgi?id=270799 <rdar://124340905>

Reviewed by Mike Wyrzykowski.

Add the missing nullptr check when looking for photo background images,
fix a logic issue when deciding if we need to generate a shrink wrapped
Path, and go back to modifying the `m_interactionRegions` Vector
directly.

* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::cachedImageIsPhoto):
(WebCore::interactionRegionForRenderedRegion):
Fix a potential crash when generating InteractionRegions for elements
with background images.

* Source/WebCore/rendering/EventRegion.h:
* Source/WebCore/rendering/EventRegion.cpp:
(WebCore::EventRegionContext::shouldConsolidateInteractionRegion):
(WebCore::EventRegionContext::uniteInteractionRegions):
Keep track of complete InteractionRegion structs instead of just rects
when aggregating by element.
(WebCore::EventRegionContext::copyInteractionRegionsToEventRegion):
(WebCore::EventRegion::appendInteractionRegions):
(WebCore::EventRegionContext::shrinkWrappedInteractionRegions): Deleted.
(WebCore::EventRegionContext::shrinkWrapInteractionRegions):
Switch back to modifying the `m_interactionRegions` Vector directly
during the shrink wrap phase (before copy-ing to the EventRegion).
Fix a logic bug with `canUseSingleRect`.

* LayoutTests/interaction-region/content-hint.html:
* LayoutTests/interaction-region/content-hint-expected.txt:
Add a test case for the crash.
Expectation update without lost InteractionRegion parameters.
* LayoutTests/interaction-region/overlap-same-group-expected.txt:
Re-baseline with the overlap shape regression fixed.

Canonical link: https://commits.webkit.org/275936@main