Source/WebCore/rendering/EventRegion.cpp
@@ -146,15 +146,15 @@ void EventRegionContext::uniteInteractionRegions(RenderObject& renderer, const F
 
         m_interactionRectsAndContentHints.add(rectForTracking, interactionRegion->contentHint);
 
-        auto discoveredIterator = m_discoveredRectsByElement.find(interactionRegion->elementIdentifier);
-        if (discoveredIterator != m_discoveredRectsByElement.end()) {
-            discoveredIterator->value.append(interactionRegion->rectInLayerCoordinates);
+        auto discoveredIterator = m_discoveredRegionsByElement.find(interactionRegion->elementIdentifier);
+        if (discoveredIterator != m_discoveredRegionsByElement.end()) {
+            discoveredIterator->value.append(*interactionRegion);
             return;
         }
 
-        Vector<FloatRect, 1> discoveredRects;
-        discoveredRects.append(interactionRegion->rectInLayerCoordinates);
-        m_discoveredRectsByElement.add(interactionRegion->elementIdentifier, discoveredRects);
+        Vector<InteractionRegion, 1> discoveredRegions;
+        discoveredRegions.append(*interactionRegion);
+        m_discoveredRegionsByElement.add(interactionRegion->elementIdentifier, discoveredRegions);
     
         auto guardRect = guardRectForRegionBounds(*interactionRegion);
         if (guardRect) {
@@ -176,10 +176,10 @@ bool EventRegionContext::shouldConsolidateInteractionRegion(RenderObject& render
             continue;
 
         auto ancestorElementIdentifier = ancestor.element()->identifier();
-        auto discoveredIterator = m_discoveredRectsByElement.find(ancestorElementIdentifier);
+        auto discoveredIterator = m_discoveredRegionsByElement.find(ancestorElementIdentifier);
 
         // The ancestor has no known InteractionRegion, we can skip it.
-        if (discoveredIterator == m_discoveredRectsByElement.end()) {
+        if (discoveredIterator == m_discoveredRegionsByElement.end()) {
             // If it has a border / background, stop the search.
             if (ancestor.hasVisibleBoxDecorations())
                 return false;
@@ -190,7 +190,7 @@ bool EventRegionContext::shouldConsolidateInteractionRegion(RenderObject& render
         if (discoveredIterator->value.size() > 1)
             continue;
 
-        auto& ancestorBounds = discoveredIterator->value.first();
+        auto& ancestorBounds = discoveredIterator->value.first().rectInLayerCoordinates;
 
         // The ancestor's InteractionRegion does not contain ours, we don't consolidate and stop the search.
         if (!ancestorBounds.contains(bounds))
@@ -240,42 +240,45 @@ bool EventRegionContext::shouldConsolidateInteractionRegion(RenderObject& render
     return false;
 }
 
-Vector<InteractionRegion> EventRegionContext::shrinkWrappedInteractionRegions()
+void EventRegionContext::shrinkWrapInteractionRegions()
 {
-    Vector<InteractionRegion> interactionRegionsToAppend;
-    interactionRegionsToAppend.reserveInitialCapacity(m_interactionRegions.size());
-    for (auto& region : m_interactionRegions) {
-        if (region.type != InteractionRegion::Type::Interaction) {
-            interactionRegionsToAppend.append(region);
-            continue;
-        }
-
-        auto discoveredIterator = m_discoveredRectsByElement.find(region.elementIdentifier);
-        if (discoveredIterator == m_discoveredRectsByElement.end())
+    for (size_t i = 0; i < m_interactionRegions.size(); ++i) {
+        auto& region = m_interactionRegions[i];
+        if (region.type != InteractionRegion::Type::Interaction)
             continue;
 
-        auto discoveredRects = discoveredIterator->value;
-        if (discoveredRects.size() == 1) {
+        auto discoveredIterator = m_discoveredRegionsByElement.find(region.elementIdentifier);
+        if (discoveredIterator == m_discoveredRegionsByElement.end())
+            continue;
+
+        auto discoveredRegions = discoveredIterator->value;
+        if (discoveredRegions.size() == 1) {
             auto rectForTracking = enclosingIntRect(region.rectInLayerCoordinates);
             region.contentHint = m_interactionRectsAndContentHints.get(rectForTracking);
-            interactionRegionsToAppend.append(region);
             continue;
         }
 
         FloatRect layerBounds;
         bool canUseSingleRect = true;
-        Vector<std::pair<FloatRect, InteractionRegion::ContentHint>> toAddAfterMerge;
-        for (const auto& rect : discoveredRects) {
+        Vector<InteractionRegion> toAddAfterMerge;
+        Vector<FloatRect> discoveredRects;
+        discoveredRects.reserveInitialCapacity(discoveredRegions.size());
+        for (const auto& discoveredRegion : discoveredRegions) {
             auto previousArea = layerBounds.area();
+            auto rect = discoveredRegion.rectInLayerCoordinates;
+            auto overlap = rect;
+            overlap.intersect(layerBounds);
             layerBounds.unite(rect);
             auto growth = layerBounds.area() - previousArea;
-            if (growth > rect.area() + std::numeric_limits<float>::epsilon())
+            if (growth > rect.area() - overlap.area() + std::numeric_limits<float>::epsilon())
                 canUseSingleRect = false;
 
             auto rectForTracking = enclosingIntRect(rect);
             auto hint = m_interactionRectsAndContentHints.get(rectForTracking);
             if (hint != region.contentHint)
-                toAddAfterMerge.append(std::make_pair(rect, hint));
+                toAddAfterMerge.append(discoveredRegion);
+            else if (growth > std::numeric_limits<float>::epsilon())
+                discoveredRects.append(rect);
         }
 
         if (canUseSingleRect)
@@ -288,20 +291,13 @@ Vector<InteractionRegion> EventRegionContext::shrinkWrappedInteractionRegions()
             region.cornerRadius = 0;
         }
 
-        interactionRegionsToAppend.append(region);
-        for (const auto& [rect, hint] : toAddAfterMerge) {
-            interactionRegionsToAppend.append({
-                region.type,
-                region.elementIdentifier,
-                rect,
-                region.cornerRadius,
-                region.maskedCorners,
-                hint
-            });
+        for (auto& region : toAddAfterMerge) {
+            auto rectForTracking = enclosingIntRect(region.rectInLayerCoordinates);
+            region.contentHint = m_interactionRectsAndContentHints.get(rectForTracking);
+            m_interactionRegions.insert(++i, WTFMove(region));
         }
 
     }
-    return interactionRegionsToAppend;
 }
 
 void EventRegionContext::removeSuperfluousInteractionRegions()
@@ -340,7 +336,8 @@ void EventRegionContext::removeSuperfluousInteractionRegions()
 void EventRegionContext::copyInteractionRegionsToEventRegion()
 {
     removeSuperfluousInteractionRegions();
-    m_eventRegion.appendInteractionRegions(shrinkWrappedInteractionRegions());
+    shrinkWrapInteractionRegions();
+    m_eventRegion.appendInteractionRegions(m_interactionRegions);
 }
 
 #endif
@@ -575,7 +572,7 @@ bool EventRegion::containsEditableElementsInRect(const IntRect& rect) const
 
 #if ENABLE(INTERACTION_REGIONS_IN_EVENT_REGION)
 
-void EventRegion::appendInteractionRegions(Vector<InteractionRegion>&& interactionRegions)
+void EventRegion::appendInteractionRegions(const Vector<InteractionRegion>& interactionRegions)
 {
     m_interactionRegions.appendVector(interactionRegions);
 }
